--- a/style.css
+++ b/style.css
@@ -3,10 +3,6 @@
   margin: 0;
 }
 
-.container {
-  width: 1236px;
-}
-
 @font-face {
   font-family: "Yeseva One";
   src: url(./fonts/Yeseva_One/YesevaOne-Regular.ttf);
@@ -267,15 +263,8 @@ main .block3 .topBlock3 {
   height: 66px;
   width: 100%;
 }
-main .block3 .repairBlockGeneral h2 {
-  font-family: "Yeseva One";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 28px;
-  text-align: center;
-  text-transform: uppercase;
-  color: #181818;
+main .block3 .repairBlockGeneral img, main .block3 .groupIcons img {
+  width: 45px;
 }
 main .block3 h2 {
   font-family: "Yeseva One";
