--- a/style.scss
+++ b/style.scss
@@ -1021,12 +1021,12 @@ main {
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            width: 520px;
+            // width: 520px;
 
             .oneLineForm {
                 display: flex;
                 justify-content: space-between;
-                width: 520px;
+                // width: 520px;
                 margin-bottom: 50px;
             }
     }
